style: fixed overflow issue

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,9 @@
+body {
+	margin: 0;
+	padding: 0;
+	overflow-x:hidden;
+}
+
 #top-logo{
 	padding:2%;
 
